Improved snapshot loading: now setting "--sna-no-change-machine" becomes "--snap-no-change-machine" and applies to .sna and .z80
Improved curses driver: now can use utf "blocky" characters and have 64x48 resolution
Improved accurate Z80 timing: IM mode 0 is 1 t-state shorter than IM mode 1
Improved real tape loading: acceleration is disabled by default, added setting to save configuration

Fixed error when trying to open user files on MacOS Catalina
Fixed Pentagon border: now ukflag demo is perfect
Fixed Spectrum 128k machines border: now ula128, scroll2017 demos are perfect
Fixed f_seek call on esxdos handler
Fixed segfault error when using breakpoints like peek/opcode in config file
Fixed segfault error when failing to open a directory
Fixed bug on zxuno changing video ram 5/7 when paging was disabled by bit DI7FFD
Fixed average cpu statistics when footer is not enabled
Fixed kempston mouse emulation on Next machine: wheel bits always return 0
Fixed bug extracting PAWS words when a word is a pronoun
Fixed undocumented opcode ED76: I had IM0 but it's IM1
Fixed RETI behaviour
Fixed Real Joystick support: buttons to event table is not set to defaults automatically anymore
Fixed loading and saving +3 .z80 snapshots
Fixed placing menu windows when using zx desktop and machines TSConf, TBBlue, CPC and QL
Fixed bug loading .sna files when rom 1 paged in
Fixed bug on return flags from tape load trap. It only affected Rocman game and enabling "any flag loading" setting
Fixed setting a configured memory breakpoint like this "--set-mem-breakpoint 0000H 2" which was fired on startup

Fixed menu issues:
-fixed generic message splash: wait until key is released (if any pressed)
-fixed opening the menu on stdout driver on the first start of ZEsarUX

Fixed tbblue emulation:
-fixed clipping in 80x32 mode
-fixed error when paging rom in ram, on case pages 0,1,2,3
-fixed "bit 7 = Disable ULA output (soft reset = 0)" on register 0x68