@@ -81,6 +81,7 @@ Improved snapshot loading: now setting "--sna-no-change-machine" becomes "--snap
 Improved curses driver: now can use utf "blocky" characters and have 64x48 resolution
 Improved accurate Z80 timing: IM mode 0 is 1 t-state shorter than IM mode 1
 Improved real tape loading: acceleration is disabled by default, added setting to save configuration
+Improved cpu speed change: now it's a lot faster
 
 Fixed error when trying to open user files on MacOS Catalina
 Fixed Pentagon border: now ukflag demo is perfect
